2004/01/21 00:45 (+0100) kaffeetisch

	* t/Gdk.t: Use show_now instead of show to make sure the window's
	actually shown.

2004/01/20 23:20 (+0100) kaffeetisch

	* t/GtkMessageDialog.t: Fix skip count.

	* xs/Gdk.xs: Make sm_client_id default to NULL in
	set_sm_client_id.

	* xs/GtkStyle.xs: Don't _copy the values in the color accessors.
	Bind GTK_STYLE_ATTACHED as Gtk2::Style::attached.  Fix
	Gtk2::Style::attach.

2004/01/20 22:58 (+0100) kaffeetisch

	A t/Gdk.t
	A t/GdkDisplay.t
	A t/GdkDisplayManager.t
	A t/GtkStyle.t
	* MANIFEST: New tests.

2004/01/20 21:33 (+0100) kaffeetisch

	* t/01.GtkWindow.t
	* t/GtkMessageDialog.t
	* t/GtkTreeView.t: Tests for 2.4 stuff.

	* xs/GtkRc.xs: Add a FIXME comment about the weird sporadic
	segfaults I'm seeing.

2004/01/20 12:29 (-0500) muppetman

	* xs/GdkKeys.xs: change PREFIX to fix gdk_keyval_* functions.
	they are now Gtk2::Gdk->keyval_*, like in gtk-perl.

2004/01/19 21:55 (-0500) muppetman

	* t/GtkEntryCompletion.t: flesh this out a bit

	* xs/GtkActionGroup.xs: remove debugging print

	* xs/GtkComboBoxEntry.xs: apidoc

2004/01/19 20:55 (-0500) rwmcfa1

	* xs/GdkColor.xs: fixed mem leak, argcolors, in alloc_colors.

	* xs/GdkWindow.xs: fixed mem leak, RETVAL, in get_frame_extents.

	* xs/GtkAccelMap.xs: fixed mem leaks, callback needed destroying after
	the foreach's were through, in map_foreach and map_foreach_unfiltered.

2004/01/19 20:52 (-0500) muppetman

	A t/GtkActionGroup.t
	A t/GtkCellLayout.t
	A t/GtkEntryCompletion.t
	A t/GtkFileChooserDialog.t
	A t/GtkFileChooserWidget.t
	A t/GtkIconTheme.t
	A t/GtkRadioAction.t
	A t/GtkRadioToolButton.t
	A t/GtkSeparatorToolItem.t
	A t/GtkToggleAction.t
	A t/GtkToggleToolButton.t
	A t/GtkToolButton.t
	A t/GtkToolItem.t
	A t/GtkTreeModelFilter.t
	A t/GtkUIManager.t
	M MANIFEST
	new tests

	* xs/GtkActionGroup.xs: avoid core dumps

2004/01/19 15:40 (-0500) muppetman

	* Makefile.PL: refactor some of the code that handles picking up